src/components/Head/styles.styl
.howTo {
  cursor pointer
  margin-top 5px
  margin-right 80px

  svg {
    transition all 0.3s
  }

  &:hover {
    svg {
      transform scale(1.1)
    }

    path {
      color: rgb(3, 173, 232);
    }
  }
}

@media screen and (max-width: 900px) {
  .howTo {
    display none
  }
}

.itemToken {

  align-items center
  cursor pointer
  position relative
  display flex
  padding-left 10px
  .imgToken {
    max-height 24px
    width 24px
    margin-right 10px
  }

  > span {
    font-size 22px
    font-weight 450
    color rgb(33, 45, 94)
  }

  &.selected {
    // color #00ADE8
    // border-bottom 1px solid #00ADE8
    > span {
      border-radius 10px

      padding 10px 5px 10px 5px
      -webkit-background-size cover
      -moz-background-size cover
      -o-background-size cover
      background-size cover
      background-color #f2f3f8
    }
  }
}

